fix(build): change build directories

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Strictly</title>
-    <script type="module" src="/dist/index.js"></script>
+    <script type="module" src="/assets/index.js"></script>
 </head>
 
 <body>
